--- a/bookingtickets/book_tickets.html
+++ b/bookingtickets/book_tickets.html
@@ -47,10 +47,10 @@
                       <h3>Payment</h3>
                       <label for="fname">Accepted Cards</label>
                       <div class="icon-container">
-                        <i class="fa fa-cc-visa" style="color:navy;"></i>
-                        <i class="fa fa-cc-amex" style="color:blue;"></i>
-                        <i class="fa fa-cc-mastercard" style="color:red;"></i>
-                        <i class="fa fa-cc-discover" style="color:orange;"></i>
+                      <a href=""> <img class="card-icons" src="../images/Visa.png" alt="visa"></a> 
+                       <a href=""> <img class="card-icons" src="../images/mastercard.png" alt="mastercard"></a>
+                       <a href=""> <img class="card-icons" src="../images/mono.png" alt="monobank"></a>
+                       <a href=""> <img class="card-icons" src="../images/binance.png" alt="binance"></a>
                       </div>
                       <label for="cname">Name on Card</label>
                       <input type="text" id="cname" name="cardname" placeholder="John More Doe">
