site fluidity--fix

--- a/bookingtickets/book_tickets.html
+++ b/bookingtickets/book_tickets.html
@@ -6,10 +6,10 @@
     <title>booking tickets</title>
     <link rel="stylesheet" href="book_tickets.css">
 </head>
-<body>
+<body id="content">
     <header>
         <div class="img-hdr">
-            <a href="../page tickets/tickets.html"> <img class="img-back" src="img-back.png" /></a>
+            <a class="back-a" href="../page tickets/tickets.html"> <img class="img-back" src="img-back.png" /></a>
         </div>
     </header>
     <main>
@@ -99,5 +99,7 @@
           </div>
 
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
