--- a/else/else.html
+++ b/else/else.html
@@ -12,11 +12,11 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jaini&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="content">
   <header>
     
       <div class="container-hdr">
-          <div class="site-name"><a class="site-name-a" href="../main page/index.html">concertt</a></div>
+          <div class="site-name"><a class="site-name-a" href="../index.html">concertt</a></div>
 
 
           <!-- <ul class="link-list" id="link-list">
@@ -94,5 +94,6 @@
     <div class="sign-in"><a class="sign-in-a" href="../sign in/signin.html">I have an account</a>
     </div>
    
+    <script src="script.js"></script>
 </body>
 </html>
