--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Jaini&family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
 
-<body class="body-img">
-    <header>
-        <div class="container-hdr">
+<body class="body-img" id="content">
+    <header >
+        <div class="container-hdr" >
             
             <ul class="link-list" id="link-list">
-                <li style="margin-right: 20px;" class="link hover-effect"><a class="link-a" href="../page tickets/tickets.html">Tickets</a>
+                <li style="margin-right: 20px;" class="link hover-effect"><a class="link-a" href="../real/page tickets/tickets.html">Tickets</a>
                     <div class="additional-words">
                         <p><a class="hover-item" href="#">Tommorow</a></p>
                         <p><a class="hover-item" href="#">in 1 day</a></p>
@@ -24,7 +24,7 @@
                         <p><a class="hover-item" href="#">any other day</a></p>
                     </div>
                 </li>
-                <li class="link hover-effect"><a class="link-a" href="../page performers/about.html">Performers</a>
+                <li class="link hover-effect"><a class="link-a"  href="../real/page performers/about.html">Performers</a>
                     <div class="additional-words">
                         <p><a class="hover-item" href="#">Playboi Carti</a></p>
                         <p><a class="hover-item" href="#">Travis Scott</a></p>
@@ -47,7 +47,7 @@
                         <p><a class="hover-item" href="#">Jazz</a></p>
                     </div>
                 </li>
-                <li style="margin-left: 50px;" class="link"><a class="link-a" href="../else/else.html">Else</a></li>
+                <li style="margin-left: 50px;" class="link"><a class="link-a" href="../real/else/else.html">Else</a></li>
             </ul>
         </div>
     </header>
@@ -63,6 +63,7 @@
         </div>
     </main>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
