--- a/page performers/about.html
+++ b/page performers/about.html
@@ -15,15 +15,15 @@
 
 </head>
 
-<body>
+<body id="content">
   <header>
     <div class="container">
       <div class="img-hdr">
-        <a href="../main page/index.html"> <img class="img-back" src="img-back.png" /></a>
+        <a class="link-a" href="../index.html"> <img class="img-back" src="img-back.png" /></a>
       </div>
       <div>
         <p class="title-hdr">
-          <a class="title-link" href="../main page/index.html">Performers</a>
+          <a class="title-link" href="../page performers/about.html">Performers</a>
         </p>
       </div>
     </div>
