--- a/page tickets/tickets.html
+++ b/page tickets/tickets.html
@@ -14,15 +14,15 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body id="content">
     <header>
         <div class="container">
             <div class="img-hdr">
-                <a href="../main page/index.html"> <img class="img-back" src="img-back.png" /></a>
+                <a class="link-a" href="../index.html"> <img class="img-back" src="img-back.png" /></a>
             </div>
             <div>
                 <p class="title-hdr">
-                    <a class="title-link" href="../main page/index.html">Tickets</a>
+                    <a class="title-link" href="../page tickets/tickets.html">Tickets</a>
                 </p>
             </div>
         </div>
