--- a/sign in/signin.html
+++ b/sign in/signin.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jaini&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="content">
     <div class="site-name"><a class="site-name-a" href="../main page/index.html">concertt</a></div>
     <div class="back">
         <a class="back-a" href="../else/else.html">
@@ -34,5 +34,7 @@
 
     <button type="submit" class="btn">Sign in</button>
   </form>
+
+  <script src="script.js"></script>
 </body>
 </html>
