--- a/page performers/about.html
+++ b/page performers/about.html
@@ -72,7 +72,7 @@
     <div class="card-container">
       <div class="card">
         <img class="card-img" src="../images/kendricks album.webp" alt="Kendrick Lamar">
-        <div class="card-title">
+        <div class="card-title_cards">
           <h4 style="margin-left: 30px;"><b>Kendrick Lamar</b></h4>
         </div>
       </div>
@@ -82,7 +82,7 @@
     <div class="card-container">
       <div class="card">
         <img class="card-img" src="../images/highest in the room.jpg" alt="Travis Scott">
-        <div class="card-title">
+        <div class="card-title_cards">
           <h4 style="margin-left: 45px;"><b>Travis Scott</b></h4>
         </div>
       </div>
@@ -92,7 +92,7 @@
     <div class="card-container">
       <div class="card">
         <img class="card-img" style="height: 200px;" src="../images/tv_girl.png" alt="TV girl">
-        <div class="card-title">
+        <div class="card-title_cards">
           <h4 style="margin-left: 55px;"><b>TV Girl</b></h4>
         </div>
       </div>
@@ -101,7 +101,7 @@
     <div class="card-container-second">
       <div class="card-two">
         <img class="card-img" style="height: 200px;" src="../images/eminem.png" alt="">
-        <div class="card-title">
+        <div class="card-title_cards">
           <h4 style="margin-left: 55px;"><b>Eminem</b></h4>
         </div>
       </div>
